--- a/index.html
+++ b/index.html
@@ -2,5 +2,10 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8">
-    <meta name+"
+    <meta name="viewport" content="width=device-width, initial-scale 1.0">
+    <title>Trabalho de Historia</title>
+    <link rel="stylesheet" href="style.css">
   </head>
+<body>
+  <! - - Cabe
+</body>
